--- a/public/index.html
+++ b/public/index.html
@@ -7,91 +7,164 @@
 </head>
 <body>
   <div class="window">
-    <header class="header">
-      <a class="logo" href="#"></a>
-      <nav class="nav">
-        <ul class="menu">
-          <li>
-            <a href="#">Каталог</a>
-          </li>
-          <li>
-            <a href="#">Объекты</a>
-          </li>
-          <li>
-            <a href="#">Статьи</a>
-          </li>
-          <li>
-            <a href="#">Доставка</a>
-          </li>
-          <li>
-            <a href="#">О нас</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="slider">
-        <div class="slider-wrap">
-          <div class="img-slider">
-            <img src="images/gallery-img.png" alt="">
+    <header>
+      <div class="wrapper">
+        <div class="header">
+          <a class="logo" href="#"></a>
+          <nav class="nav">
+            <ul class="menu">
+              <li>
+                <a href="#">Каталог</a>
+              </li>
+              <li>
+                <a href="#">Объекты</a>
+              </li>
+              <li>
+                <a href="#">Статьи</a>
+              </li>
+              <li>
+                <a href="#">Доставка</a>
+              </li>
+              <li>
+                <a href="#">О нас</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="slider">
+            <div class="slider-wrap">
+              <div class="img-slider">
+                <img src="images/gallery-img.png" alt="">
+              </div>
+              <div class="content-slider">
+                <h3>Износостокость</h3>
+                <div class="text-slider">Витрулан Москва</div>
+              </div>
+              <a class="arrow arrow-prev" href="#"></a>
+              <a class="arrow arrow-next" href="#"></a>
+            </div>
           </div>
-          <div class="content-slider">
-            <h3>Износостокость</h3>
-            <div class="text-slider">Витрулан Москва</div>
-          </div>
-          <a class="arrow arrow-prev" href="#"></a>
-          <a class="arrow arrow-next" href="#"></a>
         </div>
       </div>
     </header>
-    <div class="slider-objects">
-      <div class="slider-objects-wrap">
-        <h3>Объекты</h3>
-        <ul class="slider-objects-list">
-          <li>
-            <div class="slider-object-img">
-              <img class="img-w-max" src="images/header3.png" alt="">
-            </div>
-            <div class="slider-object-content">
-              <div class="city">Внуково, г. Москва</div>
-              <div class="description">Краткое описание раздела, описывающее его содержание</div>
-            </div>
-          </li>
-          <li>
-            <div class="slider-object-img">
-              <img class="img-w-max" src="images/header3.png" alt="">
-            </div>
-            <div class="slider-object-content">
-              <div class="city">Внуково, г. Москва</div>
-              <div class="description">Краткое описание раздела, описывающее его содержание</div>
-            </div>
-          </li>
-          <li>
-            <div class="slider-object-img">
-              <img class="img-w-max" src="images/header3.png" alt="">
-            </div>
-            <div class="slider-object-content">
-              <div class="city">Внуково, г. Москва</div>
-              <div class="description">Краткое описание раздела, описывающее его содержание</div>
-            </div>
-          </li>
-          <li>
-            <div class="slider-object-img">
-              <img class="img-w-max" src="images/header3.png" alt="">
-            </div>
-            <div class="slider-object-content">
-              <div class="city">Внуково, г. Москва</div>
-              <div class="description">Краткое описание раздела, описывающее его содержание</div>
-            </div>
-          </li>
-        </ul>
-        <a class="arrow arrow-prev obj" href="#"></a>
-        <a class="arrow arrow-next obj" href="#"></a>
+
+    <div class="main">
+      <div class="wrapper">
+        <div class="slider-objects">
+          <div class="slider-objects-wrap">
+            <h3>Объекты</h3>
+            <ul class="slider-objects-list">
+              <li>
+                <div class="slider-object-img">
+                  <img class="img-w-max" src="images/header3.png" alt="">
+                </div>
+                <div class="slider-object-content">
+                  <div class="city">Внуково, г. Москва</div>
+                  <div class="description">Краткое описание раздела, описывающее его содержание</div>
+                </div>
+              </li>
+              <li>
+                <div class="slider-object-img">
+                  <img class="img-w-max" src="images/header3.png" alt="">
+                </div>
+                <div class="slider-object-content">
+                  <div class="city">Внуково, г. Москва</div>
+                  <div class="description">Краткое описание раздела, описывающее его содержание</div>
+                </div>
+              </li>
+              <li>
+                <div class="slider-object-img">
+                  <img class="img-w-max" src="images/header3.png" alt="">
+                </div>
+                <div class="slider-object-content">
+                  <div class="city">Внуково, г. Москва</div>
+                  <div class="description">Краткое описание раздела, описывающее его содержание</div>
+                </div>
+              </li>
+              <li>
+                <div class="slider-object-img">
+                  <img class="img-w-max" src="images/header3.png" alt="">
+                </div>
+                <div class="slider-object-content">
+                  <div class="city">Внуково, г. Москва</div>
+                  <div class="description">Краткое описание раздела, описывающее его содержание</div>
+                </div>
+              </li>
+            </ul>
+            <a class="arrow arrow-prev obj" href="#"></a>
+            <a class="arrow arrow-next obj" href="#"></a>
+          </div>
+        </div>
       </div>
     </div>
+
     <div class="container">
 
     </div>
   </div>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="footerTop">
+        <h3 class="footerTitle">Новости  компании</h3>
+
+        <ul class="footerList">
+          <li class="footerList__item">
+            <img src="images/footer-list-1.jpg" alt="">
+            <a href="#">
+              Российским камнеобработчикам - новый европейский станок SKEMA LOGIC!
+            </a>
+          </li>
+
+          <li class="footerList__item">
+            <img src="images/footer-list-1.jpg" alt="">
+            <a href="#">
+              Российским камнеобработчикам - новый европейский станок SKEMA LOGIC!
+            </a>
+          </li>
+
+          <li class="footerList__item">
+            <img src="images/footer-list-1.jpg" alt="">
+            <a href="#">
+              Российским камнеобработчикам - новый европейский станок SKEMA LOGIC!
+            </a>
+          </li>
+
+          <li class="footerList__item">
+            <img src="images/footer-list-1.jpg" alt="">
+            <a href="#">
+              Российским камнеобработчикам - новый европейский станок SKEMA LOGIC!
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footerBottom">
+        <div class="footerBottom__left">
+          <p>
+            <span>Витрулан Москва</span>
+            <br>
+            © Все права защищены. 2015 год.
+          </p>
+          <p>
+            Любое копирование без уведомления
+            <br>
+            администрации строго запрещен.
+          </p>
+        </div>
+
+        <div class="footerBottom__right">
+          <ul class="footerMenu">
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+
+          <div class="footerContact">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 </html>
