--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/owl.theme.css">
+  <link rel="stylesheet" href="css/owl.transitions.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -30,23 +33,45 @@
       </nav>
       <div class="slider">
         <div class="slider-wrap">
-          <div class="img-slider">
-            <img src="images/gallery-img.png" alt="">
+          <div class="slider-header" id="slider-header">
+            <div class="item">
+              <div class="img-slider">
+                <img src="images/gallery-img.png" alt="">
+              </div>
+              <div class="content-slider">
+                <h3>Износостокость</h3>
+                <div class="text-slider">Витрулан Москва</div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="img-slider">
+                <img src="images/gallery-img.png" alt="">
+              </div>
+              <div class="content-slider">
+                <h3>Износостокость</h3>
+                <div class="text-slider">Витрулан Москва</div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="img-slider">
+                <img src="images/gallery-img.png" alt="">
+              </div>
+              <div class="content-slider">
+                <h3>Износостокость</h3>
+                <div class="text-slider">Витрулан Москва</div>
+              </div>
+            </div>
           </div>
-          <div class="content-slider">
-            <h3>Износостокость</h3>
-            <div class="text-slider">Витрулан Москва</div>
-          </div>
-          <a class="arrow arrow-prev" href="#"></a>
-          <a class="arrow arrow-next" href="#"></a>
+          <a id="arrow-prev-header" class="arrow arrow-prev" href="#"></a>
+          <a id="arrow-next-header" class="arrow arrow-next" href="#"></a>
         </div>
       </div>
     </header>
     <div class="slider-objects">
       <div class="slider-objects-wrap">
         <h3>Объекты</h3>
-        <ul class="slider-objects-list">
-          <li>
+        <div class="slider-objects-list" id="slider-objects-list">
+          <div class="item">
             <div class="slider-object-img">
               <img class="img-w-max" src="images/header3.png" alt="">
             </div>
@@ -54,8 +79,8 @@
               <div class="city">Внуково, г. Москва</div>
               <div class="description">Краткое описание раздела, описывающее его содержание</div>
             </div>
-          </li>
-          <li>
+          </div>
+          <div class="item">
             <div class="slider-object-img">
               <img class="img-w-max" src="images/header3.png" alt="">
             </div>
@@ -63,8 +88,8 @@
               <div class="city">Внуково, г. Москва</div>
               <div class="description">Краткое описание раздела, описывающее его содержание</div>
             </div>
-          </li>
-          <li>
+          </div>
+          <div class="item">
             <div class="slider-object-img">
               <img class="img-w-max" src="images/header3.png" alt="">
             </div>
@@ -72,8 +97,8 @@
               <div class="city">Внуково, г. Москва</div>
               <div class="description">Краткое описание раздела, описывающее его содержание</div>
             </div>
-          </li>
-          <li>
+          </div>
+          <div class="item">
             <div class="slider-object-img">
               <img class="img-w-max" src="images/header3.png" alt="">
             </div>
@@ -81,17 +106,107 @@
               <div class="city">Внуково, г. Москва</div>
               <div class="description">Краткое описание раздела, описывающее его содержание</div>
             </div>
-          </li>
-        </ul>
-        <a class="arrow arrow-prev obj" href="#"></a>
-        <a class="arrow arrow-next obj" href="#"></a>
+          </div>
+          <div class="item">
+            <div class="slider-object-img">
+              <img class="img-w-max" src="images/header3.png" alt="">
+            </div>
+            <div class="slider-object-content">
+              <div class="city">Внуково, г. Москва</div>
+              <div class="description">Краткое описание раздела, описывающее его содержание</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="slider-object-img">
+              <img class="img-w-max" src="images/header3.png" alt="">
+            </div>
+            <div class="slider-object-content">
+              <div class="city">Внуково, г. Москва</div>
+              <div class="description">Краткое описание раздела, описывающее его содержание</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="slider-object-img">
+              <img class="img-w-max" src="images/header3.png" alt="">
+            </div>
+            <div class="slider-object-content">
+              <div class="city">Внуково, г. Москва</div>
+              <div class="description">Краткое описание раздела, описывающее его содержание</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="slider-object-img">
+              <img class="img-w-max" src="images/header3.png" alt="">
+            </div>
+            <div class="slider-object-content">
+              <div class="city">Внуково, г. Москва</div>
+              <div class="description">Краткое описание раздела, описывающее его содержание</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="slider-object-img">
+              <img class="img-w-max" src="images/header3.png" alt="">
+            </div>
+            <div class="slider-object-content">
+              <div class="city">Внуково, г. Москва</div>
+              <div class="description">Краткое описание раздела, описывающее его содержание</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="slider-object-img">
+              <img class="img-w-max" src="images/header3.png" alt="">
+            </div>
+            <div class="slider-object-content">
+              <div class="city">Внуково, г. Москва</div>
+              <div class="description">Краткое описание раздела, описывающее его содержание</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="slider-object-img">
+              <img class="img-w-max" src="images/header3.png" alt="">
+            </div>
+            <div class="slider-object-content">
+              <div class="city">Внуково, г. Москва</div>
+              <div class="description">Краткое описание раздела, описывающее его содержание</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="slider-object-img">
+              <img class="img-w-max" src="images/header3.png" alt="">
+            </div>
+            <div class="slider-object-content">
+              <div class="city">Внуково, г. Москва</div>
+              <div class="description">Краткое описание раздела, описывающее его содержание</div>
+            </div>
+          </div>
+        </div>
+        <a id="arrow-prev-obj" class="arrow arrow-prev obj" href="#"></a>
+        <a id="arrow-next-obj" class="arrow arrow-next obj" href="#"></a>
       </div>
     </div>
     <div class="container">
-
+      <ul class="articles">
+        <li>
+          <a class="article-title" href="#">Звукопоглощающие покрытия</a>
+          <div class="article-content">
+             Стеклообои марки Vitrulan Acoustic обладают высокой степенью звукоизоляции и звукопоглощения, обеспечивая более уютную атмосферу внутри помещения и препятствуя проникновению в него посторонних шумов.т.д..
+          </div>
+        </li>
+        <li>
+          <a class="article-title" href="#">Звукопоглощающие покрытия</a>
+          <div class="article-content">
+             Стеклообои марки Vitrulan Acoustic обладают высокой степенью звукоизоляции и звукопоглощения, обеспечивая более уютную атмосферу внутри помещения и препятствуя проникновению в него посторонних шумов.т.д..
+          </div>
+        </li>
+      </ul>
+      <div class="all-articles">
+        <a href="">Все статьи</a>
+      </div>
     </div>
   </div>
   <footer class="footer"></footer>
+  <script src="js/lib/jquery-1.11.3.min.js"></script>
+  <script src="js/lib/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
