--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,25 @@
           </ul>
 
           <div class="footerContact">
+            <div class="footerContact__left">
+              <div class="footerContact__phone">
+                <span class="small">+7 (965)</span> <span class="big">231-91-19</span>
+              </div>
 
+              <div class="footerContact__address">
+                107023, Москва ул.
+                <br>
+                Электрозаводская, д. 24
+              </div>
+            </div>
+            <div class="footerContact__right">
+              <a href="#" class="footerContact__title">Написать письмо</a>
+              <p class="footerContact__description">
+                Свяжитесь с нами с помощью
+                <br>
+                электронной почты
+              </p>
+            </div>
           </div>
         </div>
       </div>
