--- a/public/index.html
+++ b/public/index.html
@@ -230,23 +230,23 @@
                   </li>
 
                   <li class="footerList__item">
-                      <img src="images/footer-list-1.jpg" alt="">
+                      <img src="images/footer-list-2.jpg" alt="">
                       <a href="#">
-                          Российским камнеобработчикам - новый европейский станок SKEMA LOGIC!
+                        Привоз оборудования
                       </a>
                   </li>
 
                   <li class="footerList__item">
-                      <img src="images/footer-list-1.jpg" alt="">
+                      <img src="images/footer-list-3.jpg" alt="">
                       <a href="#">
-                          Российским камнеобработчикам - новый европейский станок SKEMA LOGIC!
+                        Поздравление с новым годом наших клиентов от компании Вертуальная Москва
                       </a>
                   </li>
 
                   <li class="footerList__item">
-                      <img src="images/footer-list-1.jpg" alt="">
+                      <img src="images/footer-list-4.jpg" alt="">
                       <a href="#">
-                          Российским камнеобработчикам - новый европейский станок SKEMA LOGIC!
+                        Тяжелая рабочая неделя
                       </a>
                   </li>
               </ul>
