--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,9 @@
                   <img class="img-w-max" src="images/header3.png" alt="">
                 </div>
                 <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
+                  <div class="city">
+                    <a href="#">Внуково, г. Москва</a>
+                  </div>
                   <div class="description">Краткое описание раздела, описывающее его содержание</div>
                 </div>
               </div>
@@ -103,7 +105,9 @@
                   <img class="img-w-max" src="images/header3.png" alt="">
                 </div>
                 <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
+                  <div class="city">
+                    <a href="#">Внуково, г. Москва</a>
+                  </div>
                   <div class="description">Краткое описание раздела, описывающее его содержание</div>
                 </div>
               </div>
@@ -112,7 +116,9 @@
                   <img class="img-w-max" src="images/header3.png" alt="">
                 </div>
                 <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
+                  <div class="city">
+                    <a href="#">Внуково, г. Москва</a>
+                  </div>
                   <div class="description">Краткое описание раздела, описывающее его содержание</div>
                 </div>
               </div>
@@ -121,7 +127,9 @@
                   <img class="img-w-max" src="images/header3.png" alt="">
                 </div>
                 <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
+                  <div class="city">
+                    <a href="#">Внуково, г. Москва</a>
+                  </div>
                   <div class="description">Краткое описание раздела, описывающее его содержание</div>
                 </div>
               </div>
@@ -130,7 +138,9 @@
                   <img class="img-w-max" src="images/header3.png" alt="">
                 </div>
                 <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
+                  <div class="city">
+                    <a href="#">Внуково, г. Москва</a>
+                  </div>
                   <div class="description">Краткое описание раздела, описывающее его содержание</div>
                 </div>
               </div>
@@ -139,7 +149,9 @@
                   <img class="img-w-max" src="images/header3.png" alt="">
                 </div>
                 <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
+                  <div class="city">
+                    <a href="#">Внуково, г. Москва</a>
+                  </div>
                   <div class="description">Краткое описание раздела, описывающее его содержание</div>
                 </div>
               </div>
@@ -148,43 +160,9 @@
                   <img class="img-w-max" src="images/header3.png" alt="">
                 </div>
                 <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
-                  <div class="description">Краткое описание раздела, описывающее его содержание</div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="slider-object-img">
-                  <img class="img-w-max" src="images/header3.png" alt="">
-                </div>
-                <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
-                  <div class="description">Краткое описание раздела, описывающее его содержание</div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="slider-object-img">
-                  <img class="img-w-max" src="images/header3.png" alt="">
-                </div>
-                <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
-                  <div class="description">Краткое описание раздела, описывающее его содержание</div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="slider-object-img">
-                  <img class="img-w-max" src="images/header3.png" alt="">
-                </div>
-                <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
-                  <div class="description">Краткое описание раздела, описывающее его содержание</div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="slider-object-img">
-                  <img class="img-w-max" src="images/header3.png" alt="">
-                </div>
-                <div class="slider-object-content">
-                  <div class="city">Внуково, г. Москва</div>
+                  <div class="city">
+                    <a href="#">Внуково, г. Москва</a>
+                  </div>
                   <div class="description">Краткое описание раздела, описывающее его содержание</div>
                 </div>
               </div>
